<resources>
    <string name="app_name">lion</string>

    <string name="main_activity_title">请选择要监测的程序</string>
    <string name="memory_monitor">内存监测</string>
    <string name="cpu_monitor">处理器监测</string>
    <string name="traffic_monitor">流量监测</string>
    <string name="power_monitor">电量监测</string>
    <string name="input">请输入要查询的包名</string>
    <string name="btn_start">查询</string>
    <string name="btn_stop">停止</string>
    <string name="result">点击开始监测后，在此显示结果</string>
    <string name="availmen">系统当前可用内存:</string>
    <string name="totalmen">系统总内存(RAM):</string>
    <string name="process_pss">所选进程所占内存:</string>
    <string name="process_privatemen">所选进程所占私有内存:</string>
    <string name="process_sharemen">所选进程所占共享内存:</string>
    <string name="no_process">您所选的程序还没有运行</string>
    <string name="wait">正在查询，请稍等</string>
    <string name="kb">KB</string>
    <string name="exit">退出</string>
    <string name="runningbackground">程序将切换后台运行</string>
    <string name="title_activity_cpu_sevice">CpuSevice</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="about_me">关于</string>
    <string name="on_off">开启/关闭悬浮窗</string>
    <string name="setting">设置</string>
    <string name="about_me_message">Designed by 服务端测试QTest</string>
    <string name="clearcache_message">清除缓存成功</string>
    <string name="clearcache_fail">缓存清除完成，不需要清理</string>
    <string name="wifi">WIFI:</string>
    <string name="mobile">3G:</string>
    <string name="cpu">CPU:</string>
    <string name="memory">MEM:</string>
    <string name="voltage">V:</string>
    <string name="mv">mV</string>
    <string name="loading">正在加载，请稍后</string>
    <string name="exit_loading">正在保存数据，请稍后</string>
    <string name="loading_title">加载中</string>
    <string name="stop">停止监测</string>
    <string name="start">开始监测</string>
    <string name="output_log">记录监测结果到储存卡</string>
    <string name="open_flow">监测过程中显示悬浮窗</string>
    <string name="exit_toast">再次点击返回退出程序</string>
    <string name="log_check">设置将在重新开始后生效</string>
    <string name="log_location">Log将被保存到：</string>
    <string name="charging">充电中</string>
    <string name="voltage_detail">当前电池电压为：</string>
    <string name="cpu_detail">当前CPU占用率为：</string>
    <string name="memory_detail">当前该程序占用内存为：</string>
    <string name="basic_setting">基本设置</string>
    <string name="refresh_time_set">设置采样时间</string>
    <string name="refresh_time_explain">点击可以设置采样的时间间隔</string>
    <string name="avoid_waring">解除图片警告</string>
    <string name="cancel">取消</string>
    <string name="recommended">了解我们</string>
    <string name="feedback">意见反馈</string>
    <string name="update">联网更新</string>
    <string name="second">秒</string>
    <string name="update_title">升级提醒</string>
    <string name="new_update">有新版本，是否要更新？</string>
    <string name="exit_dialog">监测将在退出后停止，确定退出？</string>
    <string name="update_detail">更新详情：</string>
    <string name="ok">确定</string>
    <string name="feedback_input_hint">请输入您的反馈意见</string>
    <string name="connect_input_hint">联系方式：邮箱/QQ/手机号</string>
    <string name="commit">提交</string>
    <string name="feedback_empty">您还没有输入反馈内容！</string>
    <string name="feedback_success">感谢您的反馈</string>
    <string name="no_network">当前网络不给力，请稍后再试~</string>
    <string name="sdcard">sd卡根目录</string>
    <string name="username_input">请输入您的域帐号</string>
    <string name="password_input">请输入密码</string>
    <string name="login">登录</string>
    <string name="no_update">当前版本已经是最新了</string>
    <string name="loading_data">正在获取数据</string>
    <string name="login_fail">登录失败</string>
    <string name="save_pwd">记住密码</string>
    <string name="show_pwd">显示密码</string>
    <string name="upload_fail">上传失败</string>
    <string name="clearcache">清除缓存</string>
    <string name="auto_upload_set">自动上传日志</string>
    <string name="no_log">此次测试还没有日志</string>
    <string name="upload">上传日志</string>
    <string name="upload_request">是否要上传此次测试的日志？</string>
    <string name="clearcache_request">是否要清除当前账号下的所有日志？</string>
    <string name="rating_welcome">欢迎为我们评分</string>
    <string name="setting_upload_hand">上传未成功的日志</string>
    <string name="setting_upload_hand_explain">重新上传之前未成功上传的日志</string>
    <string name="all_selected">全选</string>
    <string name="all_unselected">全不选</string>
    <string name="score">分</string>
    <string name="current_score">6分</string>
    <string name="hand_upload_log">上传日志</string>
    <string name="no_uid">没有uid</string>
    <string name="about_welcome">感谢使用APP性能监测工具</string>
    <string name="about_getmore">获取更多信息请访问奇测云：</string>
    <string name="about_url">http://qtc.corp.qihoo.net</string>
    <string name="detail_url">http://qtc.corp.qihoo.net/mobiletest/index.php</string>
    <string name="help">帮助</string>
    <string name="help_title">奇测云——App性能监控工具</string>
    <string name="about_app">关于软件</string>
    <string name="no_file_selected">未选择日志</string>
    <string name="uploading">正在上传</string>
    <string name="no_unupload_log">这里什么都没有发现哦~</string>

    <string name="uploading_log_dialog_message">共%1$d个任务，已成功上传%2$d个</string>
    <string name="log_size">大小:</string>
    <string name="log_modify_time">修改时间:</string>

    <string name="version_code">当前版本号为：</string>
    <string name="setting_feq_remmond">(推荐)</string>
    <string name="tologin">去登录</string>
    <string name="offline">离线模式</string>
    <string name="offline_tips">离线模式不能记录测试结果</string>

    <string name="continue_monitor">后台监测</string>
    <string name="app_list_header_refresh_down">下拉刷新</string>
    <string name="app_list_header_refresh">松手立即刷新</string>
    <string name="app_list_loading">正在加载</string>
    <string name="app_list_refresh_done">刷新完成</string>
    <string name="app_image_helper">清除图片警告，无用</string>
    <string name="process_list_refresh_done">程序列表刷新完成</string>
    <string name="startapp">启动程序耗时</string>
    <string name="ms">毫秒</string>
    <string name="startapp_timeout">启动程序超时</string>
    <string name="flow_speed">网络监控类别</string>
    <string name="flow_speed_explain">点击可更改监控网速或总流量</string>
    <string name="flow_all">总流量</string>
    <string name="flow_speed_now">网速</string>
    <string name="flow_speed_monitor">监控进程网速</string>
    <string name="flow_speed_monitor_all">监控进程所消耗的总流量</string>
    <string name="custompro_activity_title">请输入要监测程序的包名</string>
</resources>
